# InfiniCCL

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
examples/: CMakeLists.txt  all_gather.cc  all_reduce.cc  cluster.yaml  utils.h
include/: comm.h  data_type.h  return_status.h
scripts/: build.sh  gen_bridge.py  icclrun.py  icclrun_logic.py  mxcc_wrapper.sh  run_wrapper.sh
scripts/backends/: ompi.py
src/: CMakeLists.txt  backend.h  comm_impl.h  communicator.h  constexpr_map.h  data_type_impl.h  device.h  dispatcher.h  logging.h  operation.h  return_status_impl.h  runtime.h  traits.h
src/base/: all_gather.h  all_reduce.h  comm_destroy.h  comm_init_all.h  finalize.h  get_rank.h  get_size.h  init.h
src/cpu/: data_type_.h  device_.h  runtime_.h
src/cuda/: runtime_.h
src/metax/: data_type_.h  device_.h  runtime_.h
src/nvidia/: data_type_.h  device_.h  runtime_.h
src/nvidia/nccl/: comm_instance.h
src/ompi/: checks.h  comm_instance.h  type_map.h
src/ompi/impl/: all_gather.h  all_reduce.h  comm_destroy.h  comm_init_all.h  finalize.h  get_rank.h  get_size.h  init.h
